# python-api-frontend

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yml  docker-compose.yaml  docker-compose.yml  environment.yml  example_apis.ipynb  pyproject.toml
.github/workflow/: .github-actions.yaml  pre-commit.yaml
Dash/: .gitignore  Dockerfile  README.md  app.py  app.yaml  config.py  environment.yml  main.py  requirements.txt  submit_stock_level.py  tab1.py  tab2.py  view_stock_level.py
Dash/solutions/: tab2_results.py
FastAPI/: .gitignore  README.md  items.py  main.py  requirements.txt  schema.py
FastAPI/app/: config.py  items.py  main.py  schema.py  utils.py
FastAPI/app/db/: stock_db.csv
FastAPI/app/routers/: items.py
FastAPI/app/schemas/: schema_inventory.py
api/: __init__.py  items.py  main.py  schema.py
app/db/: stock_levels.parquet
backend/: .dockerignore  Dockerfile  __init__.py  database.py  items.py  main.py  models.py  prod.txt  schema.py
backend/app/: config.py  database.py  items.py  main.py  models.py  schema.py
backend/app/api/: __init__.py  items.py  user.py
backend/app/models/: __init__.py  base.py  items.py  user.py
backend/app/schemas/: __init__.py  items.py  user.py
backend/app/tests/unit/: __init__.py  test_items.py  test_main.py
backend/requirements/: dev.txt  prod.in  test.in  test.txt
db/: create_tables.sql  insert_tables.sql
flask/: README.md  requirements_fastapi.txt
flask/app/: __init__.py  utils.py
frontend/: Dockerfile  app.py  main.py  requirements_dash.txt  submit_stock_level.py  view_stock_level.py
frontend/requirements/: dev.txt  prod.in  test.txt
frontend/src/: __init__.py  main.py  submit_stock_level.py  view_stock_level.py
requirements/: dev.txt  prod.in  prod.txt  test.in  test.txt
tests/api/unit/: test_main.py
tests/unit/: test_items.py  test_main.py
