[project]
name = "api-frontend"
description = "Interaction between backend APIs and frontent"
readme = "README.md"
requires-python = ">=3.10"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true

[tool.ruff]
# Never enforce `E501` (line length violations).
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "D",  # for docstring check
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
line-length=88
target-version="py310"
include = ["*.py"]

[tool.ruff.pydocstyle]
convention="google"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/ -ra
--cov-report xml:coverage.xml
"""

python_files=[
    "test_*.py",
]
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]

[tool.coverage.report]
exclude_also = [
    "def main",
    "if __name__ == .__main__.:"
    ]