[project]
name = "api-frontend"
description = "Interaction between backend APIs and frontent"
readme = "README.md"
requires-python = ">=3.10"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true
disable_error_code = ["import","attr-defined"]

[tool.ruff]
# Never enforce `E501` (line length violations).
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "D",  # for docstring check
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
line-length=92
target-version="py310"
include = ["*.py"]

[tool.ruff.pydocstyle]
convention="google"

[tool.pytest.ini_options]
addopts = """
-v --cov=api \
--cov-report term-missing \
--cov-report xml:coverage.xml
"""
pythonpath = [
  ".", "api",
]

[tool.coverage.report]
exclude_also = [
    "def main",
    "if __name__ == .__main__.:"
    ]